CHANGELOG Roundcube Webmail
===========================

- Enigma: Disable format=flowed for signed plain text messages (#1490646)
- Enigma: Fix handling of encrypted + signed messages (#1490632)
- Enigma: Fix invalid boundary use in signed messages structure
- Enable use of TLSv1.1 and TLSv1.2 for IMAP (#1490640)
- Save copy of original .htaccess file when using installto.sh script (1490623)
- Fix regression where some message attachments could be missing on edit/forward (#1490608)
- Fix regression in displaying contents of message/rfc822 parts (#1490606)
- Fix handling of message/rfc822 attachments on replies and forwards (#1490607)
- Fix PDF support detection in Firefox > 19 (#1490610)
- Fix path traversal vulnerability in setting a skin [CVE-2015-8770] (#1490620)
- Fix so drag-n-drop of text (e.g. recipient addresses) on compose page actually works (#1490619)
- Fix .htaccess rewrite rules to not block .well-known URIs (#1490615)
- Fix mail view scaling on iOS (#1490551)
- Fix PHP7 warning "session_start(): Session callback expects true/false return value" (#1490624)
- Fix XSS issue in SVG images handling (#1490625)
- Fix missing language name in "Add to Dictionary" request in HTML mode (#1490634)
- Fix (again) security issue in DBMail driver of password plugin [CVE-2015-2181] (#1490643)
- Fix bug where Archive/Junk buttons were not active after page jump with select=all mode (#1490647)
- Fix bug in long recipients list parsing for cases where recipient name contained @-char (#1490653)
- Plugin API: Added addressbook_export hook

RELEASE 1.2-beta
----------------
- Update TinyMCE to version 4.2
- Remove backward compatibility "layer" of bc.php (#1490534)
- Add possibility to define date format in write operations for ldap attributes (#1488741)
- Display attachment size in compose (#1484774)
- Added possibility to drag-n-drop attachments from mail preview to compose window
- Implemented mail messages searching with predefined date interval